# mpkg-school-info

./: .gitignore  README.md  README.rst  boot_my_app.py  check_my_test.py  makemigrations_my_app.py  requirements.txt  setup.cfg  setup.py  tox.ini
my_app/: admin.py  models.py  tests.py  urls.py  views.py
my_app/fixtures/: fake.json
my_app_project/: manage.py  requirements.txt
my_app_project/my_app_project/: asgi.py  settings.py  urls.py  wsgi.py
