# school_info/setup.cfg
[metadata]
name = mpkg-school-info
version = 1.0.1
description = Sample installable django app
long_description = file:README.rst
url = https://github.com/realSaeedHassani/mpkg-school-info
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
test_suite = check_my_test.get_suite